# img2

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  nginx-img2.bjk.ai.conf  package-lock.json  package.json  playwright.config.ts  run.sh
docs/: capture-screenshots.mjs
docs/assets/images/: img2-infographic-how-it-works-20260206.txt
g3img/: g3img.md  g3img_guide.md
src/: main.rs
templates/: index.html
tests/e2e/: _helpers.ts  health.spec.ts  ui.spec.ts  upload.spec.ts
