[package]
name = "img2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "fs", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
qrcode = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
rusqlite = { version = "0.31", features = ["bundled"] }
